# GTestWithTravis

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
palindromeLib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
palindromeTests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PalindromeTest  PalindromeTest.cpp  cmake_install.cmake
